@@ -1,3 +1,9 @@
+22/07/09Sylvain Gaillard
+* Added SequenceTools::getNumberOfUnresolvedSites
+* Updated SequenceTools::getNumberOfSites,
+	SequenceTools::getNumberOfCompleteSites and SequenceTools::removeGaps to be
+	Alphabet implementation independant.
+
 07/07/07 Julien Dutheil
 * Updated GranthamAAChemicalDistance, with a new signed, non-symmetric,
 	option.
